--- a/Bozhe Ime Logo/index.html
+++ b/Bozhe Ime Logo/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Bozhe Ime Logo</title>
     <link rel="stylesheet" href="style.css">
 </head>
     <body style="background-color: rgb(0, 1, 20);">
