--- a/Bozhe Ime Logo/index.html
+++ b/Bozhe Ime Logo/index.html
@@ -5,8 +5,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bozhe Ime Logo</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
+
+<link rel="stylesheet" href="style.css">
 </head>
-    <body style="background-color: rgb(0, 1, 20);">
-        <img src="logo.svg" alt="Logo" >
+    <body>
+
+        <div class="wrapper"> 
+
+            <img id="logo" src="logo.svg" alt="Logo">
+
+            <div class="text">
+
+                <h1>БОЖЕ ИМЕ</h1>
+                <p>SPA <span class="i">&</span> PARK HOTEL</p>
+
+            </div>
+            
+        </div>
+
     </body>
+
 </html>
